--- a/webapp.yml
+++ b/webapp.yml
@@ -1,5 +1,5 @@
 ---
- - hosts: qa
+ - hosts: prod
    tasks:
    - name: deploy webapp into qa server
      copy: src=/var/lib/jenkins/workspace/cicd/index.html  dest=/var/www/html
