--- a/webapp.yml
+++ b/webapp.yml
@@ -11,4 +11,4 @@
      ignore_errors: true
 
    - name: bringup container
-     raw: docker run -dti --name webapp -p 80:80 sreedevops26/mydevops:1.0 /bin/bash 
+     raw: docker run -dti --name webapp -p 80:80 sreedevops26/mydevops:"{{version}}" /bin/bash 
