--- a/webapp.yml
+++ b/webapp.yml
@@ -1,17 +1,16 @@
 ---
  - hosts: prod
-   vars:
-      version: test
    tasks:
-   - name: pull docker images from registry
-     raw: docker pull sreedevops26/mydevops:"{{version}}"
+   - name: pull docker image from registry
+     raw: docker pull sreedevops26/mydevops:2019.2
 
-   - name: remove docker container if already exists
-     raw: docker rm -f webapp 
+   - name: remove container if already exists
+     raw: docker rm -f myapp
      ignore_errors: true
 
-   - name: bringup container
-     raw: docker run -dti --name webapp -p 80:80 sreedevops26/mydevops:"{{version}}" /bin/bash
+   - name: create container for webapp
+     raw: docker run -dti --name myapp -p 80:80 sreedevops26/mydevops:2019.2 /bin/bash
 
-   - name: restart docker container after deploying app
-     raw: docker restart webapp
+   - name: start nginx service from docker host
+     raw: docker exec -it myapp sh -c "service nginx start"
+     ignore_errors: true
