--- a/webapp.yml
+++ b/webapp.yml
@@ -1,8 +1,8 @@
 ---
  - hosts: qa-server
    tasks:
-   - name: pull docker image from registry
-     raw: docker pull sreedevops26/mydevops:2019.2
+#   - name: pull docker image from registry
+#     raw: docker pull sreedevops26/mydevops:2019.2
 
    - name: remove container if already exists
      raw: docker rm -f myapp
