--- a/webapp.yml
+++ b/webapp.yml
@@ -9,13 +9,13 @@
      ignore_errors: true
 
    - name: copy nginx compose file into target server
-     copy: src=webapp-nginx.yml  dest=/root
+     copy: src=webapp-nginx.yml  dest=/tmp
 
 #   - name: create container for webapp
 #     raw: docker run -dti --name myapp -p 80:80 sreedevops26/mydevops:2019.2 /bin/bash
  
    - name: run docker-compose file to bring up webapp
-     raw: docker-compose -f /root/webapp-nginx.yml up -d
+     raw: docker-compose -f /tmp/webapp-nginx.yml up -d
 
    - name: start nginx service from docker host
      raw: docker exec -it myapp sh -c "service nginx start"
